* Version ?.?.?
- Changed usage of STL to gain better compatibility with old GCC versions
  (credits to Jeremy Chadwick for finding the relevant code)
- Fixed typos in mod_suphp.c (Apache 1.3)
  (credits to Johan Ekenberg for finding these typos)

* Version 0.6.0 (27 May 2005)
++ The development of this version was sponsored by Techno-vi - Wanix. ++
++ Thanks to the sponsor!                                              ++
- Ported suPHP to C++
- Ported build system to automake
- Added runtime configuration support
- Made writeable by group/others check optional
- Rewrote Apache 1.3.x module completely, thus now supporting all
  setid-modes with Apache 1.3 and Apache 2.0
- Added support for multiple interpreters
- Added support for runtime-configurable loglevel

* Version 0.5.2 (13 July 2004)
- Added support for UIDs/GIDs not listed in system configuration when using
  "force" or "paranoid" mode
- Fixed bug in configure script that caused autoconf to assume wrong values
- Changed behaviour for setting "REDIRECT_STATUS": Now it is only set to 
  "200" when it has not already been set by Apache
- Fixed bug causing environment variables with values ending with a '='
  sign to be unset
	
* Version 0.5.1 (24 February 2004)
- Empty environment variables now are deleted from the environment instead
  of being set to "no value"
- Fixed bug causing a segmentation fault when using different suPHP_Engine 
  settings in vhosts (special thanks to Matthias Brunner for tracking down 
  this problem)
	
* Version 0.5 (10 January 2004)
- Apache 2.x support
- Portability to other *NIX systems improved by using more compatible
  system calls
- Improved logging
- Added "--with-setid-mode" compile time option (see doc/INSTALL for
  details)
- Apache 2.x version now supports direct header output
  (like "HTTP/1.0 401 ...")

* Version 0.3 (23 August 2003)
- Changed build system to GNU autoconf
- Supplementary groups are set correctly